--- a/sourse/pug/blocks/sVacAccardion/_sVacAccardion.pug
+++ b/sourse/pug/blocks/sVacAccardion/_sVacAccardion.pug
@@ -4,36 +4,42 @@ mixin sVacAccardion(data)
 		.container
 			+ddGroup()
 				+ddGroupItem('Арт-директор', 'Посмотреть подробнее', 'Мы&nbsp;ищем сильного арт-директора! Человека, который может самостоятельно генерить концепты, следить за&nbsp;их&nbsp;воплощением в&nbsp;жизнь, презентовать ...')
-					ul
-						+ddContent('Опыт работы с супер-клиентами и ведения супер-проектов')
-						+ddContent('Клиентоориентированность, самоорганизация и ответственность')
-						+ddContent('Целеустремленность, способность самостоятельно принимать решения')
+					.container
+						ul
+							+ddContent('Опыт работы с супер-клиентами и ведения супер-проектов')
+							+ddContent('Клиентоориентированность, самоорганизация и ответственность')
+							+ddContent('Целеустремленность, способность самостоятельно принимать решения')
 				+ddGroupItem('Менеджер в отдел развития', 'Посмотреть подробнее', 'Кто не&nbsp;боится огня, воды и&nbsp;медных труб. Вам предстоит работать с&nbsp;новыми клиентами, полностью вести клиентов от&nbsp;первого контакта до&nbsp;момента ...')
-					ul
-						+ddContent('Опыт работы с супер-клиентами и ведения супер-проектов')
-						+ddContent('Клиентоориентированность, самоорганизация и ответственность')
-						+ddContent('Целеустремленность, способность самостоятельно принимать решения')
+					.container
+						ul
+							+ddContent('Опыт работы с супер-клиентами и ведения супер-проектов')
+							+ddContent('Клиентоориентированность, самоорганизация и ответственность')
+							+ddContent('Целеустремленность, способность самостоятельно принимать решения')
 				+ddGroupItem('Руководитель проектов', 'Посмотреть подробнее', 'Рассмотрим резюме всех супер-героев со&nbsp;следующими способностями:')
-					ul
-						+ddContent('Опыт работы с супер-клиентами и ведения супер-проектов')
-						+ddContent('Клиентоориентированность, самоорганизация и ответственность')
-						+ddContent('Целеустремленность, способность самостоятельно принимать решения')
+					.container
+						ul
+							+ddContent('Опыт работы с супер-клиентами и ведения супер-проектов')
+							+ddContent('Клиентоориентированность, самоорганизация и ответственность')
+							+ddContent('Целеустремленность, способность самостоятельно принимать решения')
 						+ddContent('Впечатляющие презентационные навыки ')
 						+ddContent('Стальные нервы')
 						+ddContent('Активная жизненная позиция, коммуникабельность, оптимизм')
 				+ddGroupItem('Копирайтер', 'Посмотреть подробнее', 'Кто не&nbsp;боится огня, воды и&nbsp;медных труб. Вам предстоит работать с&nbsp;новыми клиентами, полностью вести клиентов от&nbsp;первого контакта до&nbsp;момента ...')
-					ul
-						+ddContent('Опыт работы с супер-клиентами и ведения супер-проектов')
-						+ddContent('Клиентоориентированность, самоорганизация и ответственность')
-						+ddContent('Целеустремленность, способность самостоятельно принимать решения')
+					.container
+						ul
+							+ddContent('Опыт работы с супер-клиентами и ведения супер-проектов')
+							+ddContent('Клиентоориентированность, самоорганизация и ответственность')
+							+ddContent('Целеустремленность, способность самостоятельно принимать решения')
 				+ddGroupItem('Менеджер в отдел развития', 'Посмотреть подробнее', 'Кто не&nbsp;боится огня, воды и&nbsp;медных труб. Вам предстоит работать с&nbsp;новыми клиентами, полностью вести клиентов от&nbsp;первого контакта до&nbsp;момента ...')
-					ul
-						+ddContent('Ассистент клиентского отдела')
-						+ddContent('Клиентоориентированность, самоорганизация и ответственность')
-						+ddContent('Целеустремленность, способность самостоятельно принимать решения')
+					.container
+						ul
+							+ddContent('Ассистент клиентского отдела')
+							+ddContent('Клиентоориентированность, самоорганизация и ответственность')
+							+ddContent('Целеустремленность, способность самостоятельно принимать решения')
 				+ddGroupItem('Дизайнер-айдентист', 'Посмотреть подробнее', 'Кто не&nbsp;боится огня, воды и&nbsp;медных труб. Вам предстоит работать с&nbsp;новыми клиентами, полностью вести клиентов от&nbsp;первого контакта до&nbsp;момента ...')
-					ul
-						+ddContent('Опыт работы с супер-клиентами и ведения супер-проектов')
-						+ddContent('Клиентоориентированность, самоорганизация и ответственность')
-						+ddContent('Целеустремленность, способность самостоятельно принимать решения')
+					.container
+						ul
+							+ddContent('Опыт работы с супер-клиентами и ведения супер-проектов')
+							+ddContent('Клиентоориентированность, самоорганизация и ответственность')
+							+ddContent('Целеустремленность, способность самостоятельно принимать решения')
 	// end sVacAccardion
