--- a/sourse/pug/blocks/mixin-wrap/components/ddgroup.pug
+++ b/sourse/pug/blocks/mixin-wrap/components/ddgroup.pug
@@ -29,18 +29,20 @@ mixin ddGroupItem(title, headline, text, activeClasses='', cl='dd-head-js')
 	//-хедеру и контенту => .dd-head-js, .dd-content-js
 	//-!!! они должни вкладиваться в 1 контейнер(+e.item) header стилизируеться от етого контейнера, внутри хедера втавлять что душе угодно
 	+e.item(class=activeClasses)&attributes(attributes)
+
 		+e.head(class= cl)
-			+e.row.row
-				.col
-					+e.wrraper
-						h4!= title
-						if headline
-							span!= headline
-						
-						p!= text
-				.col-auto
-					button
-		if block
-			+e.content.dd-content-js(class=activeClasses)
-				block
-		else
+			.container
+				+e.row.row
+					.col
+						+e.wrraper
+							h4!= title
+							if headline
+								span!= headline
+							
+					.col-auto
+						+e.BUTTON.button--js
+		+e.content.dd-content-js(class=activeClasses)
+			.container
+				+e.first-content
+					p!= text 
+			block
