--- a/sourse/pug/pages/14-search-3.pug
+++ b/sourse/pug/pages/14-search-3.pug
@@ -8,7 +8,7 @@ include ../blocks/sCard/_sCard.pug
 //- include ../blocks/sNews/_sNews.pug
 
 block variables
-	- let  mainPage= '' 
+	- let  mainPage= 'page-without-bread' 
 	- let  bg= null
 
 block title
