--- a/sourse/pug/pages/03-Service-2.pug
+++ b/sourse/pug/pages/03-Service-2.pug
@@ -42,6 +42,15 @@ block pagecontent
 			+ddGroupItem('Ситуация', '', 'Корпоративная социальная программа «Вместе» реализуется Металлоинвестом и направлена на создание условий для развития регионов присутствия.  ')
 			+ddGroupItem('Задача', '', 'Разработать архитектуру и гибкую систему визуальной коммуникации для разных типов носителей. В едином фирменном стиле дифференцировать')
 			+ddGroupItem('Решение', '', '&laquo;Вместе &raquo;&nbsp;&mdash; строится будущее руками каждого, кому небезразлично настоящее. Инициативы граждан Металлоинвест реализует вместе с&nbsp;ними. Архитектура &laquo;Вместе&raquo; вмещает под своим зонтиком разные направления: &laquo;Вместе со&nbsp;спортом&raquo;, &laquo;Вместе с&nbsp;культурой&raquo;, &laquo;Вместе с&nbsp;призванием&raquo;')
+				+b.sContent.section
+					.container
+						ol
+							li Nam luctus orci non suscipit mollis
+							li Proin suscipit placerat turpis, vitae fermentum turpis auctor vel
+								ol
+									li Donec scelerisque massa nec sapien tempus consectetur
+									li Morbi vehicula mauris neque
+							li Quisque aliquet nibh nec egestas faucibus
 				+sCard(``,``, slider)
 					.col-md-12
 						+e.slider--js.swiper
