--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -55,6 +55,10 @@
 	font-size:math.div(16,10)*1rem;
 	width: math.div(13,16)*1em;
 }
+.icon-done {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-email {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
