--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -33,10 +33,10 @@ block pagecontent
 		+mainSliderItem('slide-lg', 'slide-sm', 'Valio. Clean design for &laquo;Сlean label&raquo; sadsada', 'Потребительский брендинг dasdasdasd')
 	+sServiceHead()
 		+servicesDescription("Процесс создания брендов мы&nbsp;понимаем комплексно и&nbsp;можем взять на&nbsp;себя весь спектр работ&nbsp;&mdash; от&nbsp;проведения маркетинговых исследований до&nbsp;тестирования и&nbsp;реализации собственных творческих разработок.").order-md-last
-		+servicesGoods('5768', 'выполненных проектов')
-		+servicesGoods('668', 'довольных клиентов')
-		+servicesGoods('34', 'светлейших головы')
-		+servicesGoods('65', 'наград за&nbsp;проекты').--indent
+		+servicesGoods('5768', 'выполненных проектов', 'number-4')
+		+servicesGoods('4000', 'довольных клиентов', 'number-4')
+		+servicesGoods('900', 'светлейших головы', 'number-3')
+		+servicesGoods('90', 'наград за&nbsp;проекты', 'number-2').--indent
 	.container
 		+b.UL.services-list--indent
 			+servicesItem("Все услуги")
