--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -95,35 +95,55 @@
 				padding-top: rem(33);
 			}
 		}
+		@include media-breakpoint-up(lg) {
 		padding-bottom: rem(20);
+		}
+		padding-bottom: 24px;
 		&:not(:last-child) {
+		
+		}
+		// &:last-child {
+		// 	@include media-breakpoint-down(lg) {
+		// 		.dd-group::after {
+		// 			content: none;
+		// 		}
+		// 	}
+		// }
+		&:not(:last-child), &:first-child:last-child { 
 			@include media-breakpoint-up(lg) {
 				padding-bottom: rem(35);
 			}
+				&::after {
+					position: absolute;
+					content: "";
+					display: block;
+					height: 1px;
+					bottom: 0;
+					left: -50vw;
+					width: 200vw;
+					background-color: #c2c2c2;
+					@include media-breakpoint-down(lg) {
+						width: 100%;
+						left: 0;
+					}
+				} 
 		}
-		&:last-child {
-			@include media-breakpoint-down(lg) {
-				.dd-group::after {
-					content: none;
-				}
-			}
-		}
-		&:not(:last-child) {
-			&::after {
-				position: absolute;
-				content: "";
-				display: block;
-				height: 1px;
-				bottom: 0;
-				left: -50vw;
-				width: 200vw;
-				background-color: #c2c2c2;
-				@include media-breakpoint-down(lg) {
-					width: 100%;
-					left: 0;
-				}
-			}
-		}
+		// &:first-child:last-child{ 
+		// 	&::after {
+		// 		position: absolute;
+		// 		content: "";
+		// 		display: block;
+		// 		height: 1px;
+		// 		bottom: 0;
+		// 		left: -50vw;
+		// 		width: 200vw;
+		// 		background-color: #c2c2c2;
+		// 		@include media-breakpoint-down(lg) {
+		// 			width: 100%;
+		// 			left: 0;
+		// 		}
+		// 	}
+		// }
 		
 		&.active {
 			--ph: ' ';
@@ -182,25 +202,25 @@
 			}
 		}
 		&--service {
-			&::after {
-				position: absolute;
-				content: "";
-				display: block;
-				height: 1px;
-				bottom: 0;
-				left: -50vw;
-				width: 200vw;
-				background-color: #c2c2c2;
-				@include media-breakpoint-down(lg) {
-					width: 100%;
-					left: 0;
-				}
-			}
-			&:first-child:last-child{
-				&::after{
-					display: none;
-				}
-			}
+			// &::after {
+			// 	position: absolute;
+			// 	content: "";
+			// 	display: block;
+			// 	height: 1px;
+			// 	bottom: 0;
+			// 	left: -50vw;
+			// 	width: 200vw;
+			// 	background-color: #c2c2c2;
+			// 	@include media-breakpoint-down(lg) {
+			// 		width: 100%;
+			// 		left: 0;
+			// 	}
+			// }
+			// &:first-child:last-child{
+			// 	&::after{
+			// 		// display: none;
+			// 	}
+			// }
 		}
 	}
 	&__row {
@@ -210,9 +230,12 @@
 	}
 	&__content {
 		// display: none;
+		max-height: var(--ph, 0);
 		&:not(.active) {
 			position: relative;
+			@include media-breakpoint-up(lg) {
 			max-height: var(--ph, 3.6em);
+			}
 			overflow: hidden;
 			line-height: 2;
 			font-weight: normal;
@@ -536,33 +559,27 @@
 		position: relative;
     overflow: auto;
     padding-bottom: 10px;
+		@include roww(rem(32));
 		@include media-breakpoint-down(sm){
 			margin-right: -1rem;
-		}
-		li {
-			padding: 0 rem(16);
-			&:first-child {
-				padding-left: 0;
-			}
-			&:last-child {
-				padding-right: 0;
-			}
 		}
 		a,
 		button {
 			@include mt;
 			padding: 0;
-			color: $body-color !important;
+			color: #9D9C9C ;
 			border-bottom: 2px solid transparent;
 			font-size: rem(22);
 			@include media-breakpoint-up(lg) {
 				font-size: rem(16);
 			}
 			&.active {
+				color: $body-color !important;
 				border-bottom: 2px solid $primary;
 			}
 			&:hover {
-				border-bottom: 2px solid $primary;
+				color: $body-color !important;
+				// border-bottom: 2px solid $primary;
 			}
 		}
 	}
@@ -591,6 +608,9 @@
 	--h: #{rem(599)};
 	height: var(--h);  
 	min-height: 100vh;
+	&__slide{
+		@extend .text-body, .tdn;
+	}
 	
 	@include media-breakpoint-up(lg) {
 		margin-bottom: rem(80 - 17.5);
