--- a/sourse/pug/blocks/sContent/_sContent.scss
+++ b/sourse/pug/blocks/sContent/_sContent.scss
@@ -41,6 +41,12 @@
 			list-style-type: none;
 			padding-left: rem(32);
 			position: relative;
+			li{
+				padding-left: rem(22);
+				&::before{
+					left: 0;
+				}
+			}
 			&:not(:last-child) {
 				margin-bottom: rem(8);
 			}
