--- a/sourse/pug/blocks/sServiceHead/_sServiceHead.scss
+++ b/sourse/pug/blocks/sServiceHead/_sServiceHead.scss
@@ -34,15 +34,22 @@
 			margin-left: rem(8);
 		}
 	}
+	@include media-breakpoint-down(md) {
+		.content-wrrap{
+			margin-left: calc((var(--bs-gutter-x) * -1 / 2));
+			margin-right: calc((var(--bs-gutter-x) * -1 / 2)); 
+		}
+		.dd-group__content:not(.active){
+			--ph: 0;
+		}
+	}
 	.dd-group {
 		margin-bottom: rem(24);
 		@include media-breakpoint-up(lg) {
 			margin-bottom: rem(20);
 		}
 		&__content {
-			margin-left: calc((var(--bs-gutter-x) * -1 / 2));
-			margin-right: calc((var(--bs-gutter-x) * -1 / 2));
-			margin-top: rem(24);
+			// margin-top: rem(24);
 			@include media-breakpoint-up(sm) {
 				margin-left: 0;
 				margin-right: 0;
@@ -92,6 +99,10 @@
 			text-align: left;
 			padding-top: rem(5);
 			padding-bottom: rem(5);
+			white-space: nowrap;
+			text-overflow: ellipsis;
+			overflow: hidden;
+			padding-right: 50px;
 			@include media-breakpoint-up(md) {
 				display: none;
 			}
@@ -99,18 +110,24 @@
 				content: none;
 			}
 			.icon {
-				position: absolute;
-				right: rem(10);
-				font-size: rem(24);
-				fill: none;
-				stroke: $body-color;
+				display: none;
+				// position: absolute;
+				// right: rem(10);
+				// font-size: rem(24);
+				// fill: none;
+				// stroke: $body-color;
 			}
+			background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.5 5.5L7.5 10.5L2.5 5.5' stroke='%231F1D1D' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+			background-position: calc(100% - 15px) 50%;
+			background-size: 24px;
+			background-repeat: no-repeat;
 		}
 		.dropdown-menu {
 			min-width: auto;
-			max-width: calc(100% - 32px);
+			max-width: 100%;
 			width: 100%;
 			.dropdown-item {
+				cursor: pointer;
 				white-space: normal;
 			}
 			&.active {
@@ -128,7 +145,7 @@
 	@include media-breakpoint-down(sm) {
 		.dd-group{
 			margin-bottom: 0;
-			.dd-group__item:last-child{
+			.dd-group__item:last-child:not(:first-child){
 				padding-bottom: 0;
 			}
 		}
