--- a/sourse/pug/pages/03-Service-2.pug
+++ b/sourse/pug/pages/03-Service-2.pug
@@ -88,7 +88,7 @@ block pagecontent
 				+servicesItem('Стратегия')
 				+servicesItem('Корпоративный брендинг')
 				+servicesItem('Продвижение')
-	+sNews('Для этого клиента делали')
+	+sNews('Для этого клиента делали','', 'page')
 		+news-item('1-1', `Халзан: новые истории любимого героя`, ``, `links`)
 			+servicesList()
 				+servicesItem('Стратегия')
