--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -234,7 +234,7 @@
 		&:not(.active) {
 			position: relative;
 			@include media-breakpoint-up(lg) {
-			max-height: var(--ph, 3.6em);
+			max-height: var(--ph, 1.6em);
 			}
 			overflow: hidden;
 			line-height: 2;
@@ -245,12 +245,12 @@
 				content: "";
 				display: block;
 				width: 100%;
-				height: 2.5em;
-				top: 1.6em;
+				height: 1.2em;
+				top: .6em;
 				left: 0;
 				opacity: var(--op,1);
 				// transition: all .3s ease;
-				background-image: linear-gradient(to bottom, hsla(0, 0%, 100%, 0.3) 0%, $white 80% );
+				background-image: linear-gradient(to bottom, hsla(0, 0%, 100%, 0.3) 0%, $white 60% );
 				// background-image: linear-gradient(1turn,#fff 3.98%,hsla(0,0%,100%,0) 65.33%);
 				@include media-breakpoint-down(lg) {
 					display: none;
