--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -720,7 +720,13 @@
 		}
 	}
 	@include media-breakpoint-up(sm) {
-
+		&.single {
+			.swiper-slide {
+				.main-slider__inner {
+					opacity: 1;
+				}
+			}
+		}
 		.swiper-slide {
 			.main-slider__inner {
 				opacity: 0;
@@ -754,6 +760,7 @@
 	max-width: rem(962);
 	background-color: $white;
 	padding: 32px 40px;
+	filter: drop-shadow(0px 2px 8px rgba(131, 127, 127, 0.15));
 	&__row-cards, &__row-news, &__row-result, &__row-border {
 		--bs-gutter-x: #{rem(8)};
 		padding-top: 16px;
