--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -146,7 +146,7 @@
 		// }
 		
 		&.active {
-			--ph: ' ';
+			--ph: ' ' !important	;
 			--op:0;
 			button {
 				&::after {
@@ -230,11 +230,15 @@
 	}
 	&__content {
 		// display: none;
-		max-height: var(--ph, 0);
 		&:not(.active) {
+			@include media-breakpoint-down(lg) {
+			--ph: 0 !important;
+			}
+			max-height: var(--ph);
 			position: relative;
 			@include media-breakpoint-up(lg) {
-			max-height: var(--ph, 1.6em);
+				--ph: 3.6em;
+				// max-height: var(--ph, 1.6em);
 			}
 			overflow: hidden;
 			line-height: 2;
@@ -246,7 +250,7 @@
 				display: block;
 				width: 100%;
 				height: 1.2em;
-				top: .6em;
+				top: calc( var(--ph) - 1em);
 				left: 0;
 				opacity: var(--op,1);
 				// transition: all .3s ease;
