--- a/sourse/pug/blocks/sContent/_sContent.scss
+++ b/sourse/pug/blocks/sContent/_sContent.scss
@@ -1,5 +1,10 @@
 
+ .sContent + .sContent,
+.sCard + .sContent {
+	margin-top: 1.5rem;
+}
 	// start .sContent
+
 	.sContent {
 	padding-top: 0;
 	padding-bottom: 0;
@@ -35,7 +40,7 @@
 	ul {
 		margin-bottom: rem(24);
 		@include media-breakpoint-up(lg) {
-			margin-bottom: rem(48);
+			margin-bottom: 1rem;
 		}
 		li {
 			list-style-type: none;
@@ -59,7 +64,8 @@
 				background-color: $primary;
 				left: 8px;
 				// top: 50%;
-				top: rem(10);
+				// top: rem(10);
+				top: 0.82em;
 				// transform: translateY(-50%);
 			}
 		}
