--- a/sourse/sass/_root.scss
+++ b/sourse/sass/_root.scss
@@ -41,6 +41,10 @@
 		--x2: calc(var(--x-wide) + 48px + #{$grid-gutter-width} - 7px) ;
 	}
 	--x2: calc(#{$grid-gutter-width} / 2) ;
+	@media (min-width: 1600px) {
+
+		--topH: 118px;
+	}
 	@include media-breakpoint-up(lg) {
 
 		--topH: 91px;
